# soccer-analysis

./: README.md  pyproject.toml
notebooks/: most_skilled_shot_takers.ipynb
