[project]
name = "soccer-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "itables>=2.8.1",
    "matplotlib>=3.11.0",
    "mplsoccer>=1.6.1",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]
